# lore

./: .gitignore  .golangci.yml  .goreleaser.yaml  .mise.toml  README.md  go.mod  go.sum  lefthook.yml  lore.toml
.ai/skills/lore-cli/: SKILL.md
.github/workflows/: docs.yml  release.yml
cmd/lore/: add.go  auth.go  cmd_test.go  create.go  export.go  harnesses.go  import.go  init.go  init_test.go  list.go  remove.go  root.go  sync.go  targets.go  version.go  wizard.go
docs/: go.mod  hugo.toml
docs/assets/css/: theme-lore-dark.css  theme-lore-light.css
docs/content/: _index.md
docs/content/guide/: _index.md  authentication.md  getting-started.md  installation.md
docs/content/reference/: _index.md  commands.md  harnesses.md  lore-toml.md  source-formats.md
internal/auth/: auth.go  auth_test.go  doc.go
internal/config/: config.go  config_test.go  doc.go
internal/harness/: claude.go  doc.go  frontmatter.go  frontmatter_test.go  harness.go  harness_test.go  opencode.go
internal/installer/: doc.go  installer.go  installer_test.go
internal/lockfile/: doc.go  lockfile.go  lockfile_test.go
internal/manifest/: doc.go  manifest.go  manifest_test.go
internal/resolver/: archive.go  archive_test.go  doc.go  export_test.go  fetch.go  handle.go  handle_test.go
internal/scanner/: doc.go  scanner.go  scanner_test.go
wrappers/npm/: install.js  package.json
wrappers/pip/: pyproject.toml
wrappers/pip/lore/: __init__.py  __main__.py
