[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "lore-agent"
version = "0.1.0"
description = "Agent skills package manager — thin pip wrapper for the lore binary"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["ai", "agents", "skills", "llm", "opencode", "claude"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
]

[project.scripts]
lore = "lore.__main__:main"

[project.urls]
Repository = "https://github.com/pierreWagou/lore"

[tool.setuptools.packages.find]
where = ["."]
include = ["lore*"]
