[build-system]
requires = ["uv_build>=0.11.21,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "lore"
module-root = ""

[project]
name = "lore-agent"
version = "0.1.0"
description = "Agent skills package manager — thin pip wrapper for the lore binary"
license = "MIT"
requires-python = ">=3.9"
keywords = ["ai", "agents", "skills", "llm", "opencode", "claude"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
]

[project.scripts]
lore = "lore.__main__:main"

[project.urls]
Repository = "https://github.com/pierreWagou/lore"

